<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <TextView
            style="@style/QuestionStyle"
            android:paddingTop="16dp"
            android:text="@string/question1" />

        <EditText
            android:id="@+id/answer1_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/answer_hint" />

        <TextView
            style="@style/QuestionStyle"
            android:text="@string/question2" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer2_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/answer2_1"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/answer2_2"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/answer2_3"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/answer2_4"
                android:textSize="16sp" />
        </RadioGroup>


        <TextView
            style="@style/QuestionStyle"
            android:text="@string/question3" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/jose"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/pep"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/answer3_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/siralex"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/sirmatt"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            style="@style/QuestionStyle"
            android:text="@string/question4" />

        <CheckBox
            android:id="@+id/answer4_checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="24dp"
            android:text="@string/answer4_1"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/answer4_checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="24dp"
            android:text="@string/answer4_2"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/answer4_checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="24dp"
            android:text="@string/answer4_3"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/answer4_checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="24dp"
            android:text="@string/answer4_4"
            android:textSize="16sp" />

        <TextView
            style="@style/QuestionStyle"
            android:text="@string/question5" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/answer5_1"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/answer5_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/answer5_2"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/answer5_3"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/answer5_4"
                android:textSize="16sp" />
        </RadioGroup>


        <TextView
            style="@style/QuestionStyle"
            android:text="@string/question6" />

        <CheckBox
            android:id="@+id/answer6_checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="24dp"
            android:text="@string/ronaldo"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/answer6_checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="24dp"
            android:text="@string/rooney"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/answer6_checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="24dp"
            android:text="@string/beckham"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/answer6_checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="24dp"
            android:text="@string/cantona"
            android:textSize="16sp" />


        <TextView
            style="@style/QuestionStyle"
            android:text="@string/question7" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer7_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/pogba"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/ronaldo"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/dimaria"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/zlatan"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            style="@style/QuestionStyle"
            android:text="@string/question8" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/rafa"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/klopp"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/pep"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/answer8_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/jose"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            style="@style/QuestionStyle"
            android:text="@string/question9" />

        <EditText
            android:id="@+id/answer9_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/answer_hint" />

        <TextView
            style="@style/QuestionStyle"
            android:text="@string/question10" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/answer10_1"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/answer10_2"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/answer10_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/answer10_3"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="24dp"
                android:text="@string/answer10_4"
                android:textSize="16sp" />
        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="40dp"
            android:onClick="submit"
            android:text="@string/submit" />

    </LinearLayout>
</ScrollView>
